# twitchdesk-desktop

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: twitchdesk-loading.html
src/: loading.rs  main.rs  preview.rs  update.rs
src/app/: actions.rs  mod.rs  state.rs  types.rs  ui_dashboard.rs  ui_header.rs  ui_login.rs  ui_transition.rs
src/models/: api.rs  local.rs  mod.rs
src/storage/: local_state.rs  mod.rs
