[package]
name = "twitchdesk-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# UI
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"

# async + http
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }

semver = "1"

# local storage
directories = "5"

urlencoding = "2"

webbrowser = "1"

[workspace]
